# dhall-ansible

./: .gitreview  .zuul.yaml  Makefile  README.md  Shakefile.hs  groups  package.dhall  project.config
Ansible/: AddHost.dhall  Apt.dhall  AptKey.dhall  AptRepository.dhall  Assemble.dhall  Assert.dhall  AsyncStatus.dhall  BlockTask.dhall  Blockinfile.dhall  Command.dhall  Copy.dhall  Cron.dhall  Debconf.dhall  Debug.dhall  Dnf.dhall  DpkgSelections.dhall  Expect.dhall  Fail.dhall  Fetch.dhall  File.dhall  Find.dhall  GatherFacts.dhall  GetUrl.dhall  Getent.dhall  Git.dhall  Group.dhall  GroupBy.dhall  Hostname.dhall  ImportPlaybook.dhall  ImportRole.dhall  ImportTasks.dhall  Include.dhall  IncludeRole.dhall  IncludeTasks.dhall  IncludeVars.dhall  Iptables.dhall  KnownHosts.dhall  Lineinfile.dhall  Meta.dhall  Package-pkg.dhall  (+33 more)
Ansible/BasePlay/: Type.dhall  default.dhall
Ansible/BaseTask/: Type.dhall  default.dhall
Ansible/Builtin/: JSON.dhall  package.dhall
Ansible/Play/: Type.dhall
Ansible/Task/: Type.dhall  default.dhall  package.dhall
Ansible/Vars/: JSON.dhall  (+11 more)
ansible-collection-to-dhall/: .gitignore  Main.hs  README.md  ansible-collection-to-dhall.cabal  default.nix  nixpkgs.nix  shell.nix
defaults/: args.dhall  loop_control.dhall  play.dhall  task.dhall
examples/: ansible-extended.dhall  ansible-posix.dhall  custom.dhall  demo.dhall  posix.dhall
schemas/: args.dhall  loop_control.dhall  play.dhall  task.dhall
scripts/: doc.py  generate.py  render.hs  update.py
tests/: basic.yaml
types/: args.dhall  loop_control.dhall  play.dhall  task.dhall
(+425 files in other folders)
